feat fatura por data de transação informada, ordenação e filtro na pesquisa das Faturas